[package]
name = "change-volume-of-active"
version = "0.2.0"
authors = ["Nikola Kocić <nikolakocic@gmail.com>"]
description = "Changes volume of active application"

[dependencies]
xcb = "0.8.1"
xcb-util = { version = "0.2.0", features = ["ewmh"] }
libpulse-sys = "0.0.0"
libc = "0.2.24"
clap = "2.26.0"
sysinfo = "0.3.14"
